# jsonschema-on-yaml

./: .pre-commit-hooks.yaml  README.md  jsonschema_on_yaml.py  setup.cfg
