[metadata]
name = jsonschema_on_yaml
version = v0.0.1
description = pre-commit hook for validating yaml via jsonschema
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mozilla-it/jsonschema_on_yaml
author = Scott A. Idler
author_email = sidler@mozilla.com
license = MPL2
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = jsonschema_on_yaml
install_requires =
    jsonschema>=3.2.0
    ruamel.yaml>=0.16.10
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    jsonschema-on-yaml = jsonschema_on_yaml:main

[bdist_wheel]
universal = True
